// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playground-environments-exist > no environments in api definition 1`] = `
[
  {
    "message": "The API does not contain the Staging environment. ",
    "nodePath": [
      "navigation",
      "0",
      "api",
    ],
    "relativeFilepath": "docs.yml",
    "severity": "fatal",
  },
]
`;

exports[`playground-environments-exist > non existent environment specified 1`] = `
[
  {
    "message": "The API does not contain the Staging environment. Existing enviroments include Production, Dev.",
    "nodePath": [
      "navigation",
      "0",
      "api",
    ],
    "relativeFilepath": "docs.yml",
    "severity": "fatal",
  },
]
`;
